[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Dengue.gd" type="Script" id=1]
[ext_resource path="res://sprites/Dengue/mosquitinho.png" type="Texture" id=2]
[ext_resource path="res://cenas/Dengue_atack.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 32.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 987.438, 583.812 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 34.0

[node name="Dengue" type="KinematicBody2D" groups=["danavel"]]
script = ExtResource( 1 )
spd = 278

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -3, -6 )
texture = ExtResource( 2 )
offset = Vector2( 4, 9 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, 4 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Dengue_atack" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -0.999969, 2.99997 )

[node name="Damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]
position = Vector2( 1, 0 )
rotation = -1.5708
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
